# dnsjinja

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  Improvements.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
samples/: config.json.sample  dnsjinja.env.sample  dnsjinja.ps1.sample
samples/templates/: standard.tpl
samples/templates/include/: 00-meta.inc  00-subdomain-meta.inc  00-ttl.inc
samples/templates/include/custom/: example.com.inc
samples/templates/include/custom-groups/: shared-hosting.inc
samples/templates/include/mail/: mail_example-provider.inc
samples/templates/include/ns/: ns_hetzner.inc
samples/templates/include/soa/: soa_hetzner.inc
samples/templates/include/validation/: example.com.inc
samples/templates/include/www/: www_example-provider.inc
samples/templates/include/xmpp/: xmpp_example-provider.inc
src/dnsjinja/: __init__.py  __main__.py  dnsjinja.py  dnsjinja_config_schema.py  exit_on_error.py  explore_hetzner.py  myloadenv.py
tests/: conftest.py  test_integration.py  test_unit.py
