[metadata]
name = dnsjinja-kaijen
version = 0.2.0
author = Kai Jendrian
author_email = kai@jendrian.de
description = Manage DNS at Hetzner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaijen/dnsjinja
project_urls =
    Bug Tracker = https://github.com/kaijen/dnsjinja/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    Jinja2
    requests
    dnspython
    Click
    python-dotenv
    jsonschema
    appdirs
    python-dotenv

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        dnsjinja = dnsjinja:main
        explore_hetzner = dnsjinja:explore_main
        exit_on_error = dnsjinja:exit_on_error